--- a/index.html
+++ b/index.html
@@ -6,12 +6,15 @@
     <link rel="stylesheet" href="style.css"></head>
 </head>
 <body>
-
+<div
+        class="navbar">
+</div>
 
 <div class="box"></div>
 
 <button class="button">Zmień kolor</button>
 
-
+<script src="navbar.js" ></script>
+<script src="przycisk.js" ></script>
 </body>
 </html>
